# pytest-django-queries

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  VERSION.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yaml  publish-pypi.yaml  test.yaml
docs/: conf.py  contributing.rst  customize.rst  diff.rst  index.rst  recommendations.rst  usage.rst
docs/extra_html/: html_export_results.html
example/: Makefile  README.md  pyproject.toml
example/src/example/: asgi.py  settings.py  urls.py  wsgi.py
example/src/example/books/: models.py  urls.py  views.py
example/src/example/books/migrations/: 0001_initial.py
example/src/example/books/templates/books/: detail.html  index.html
example/test/: test_views.py
pytest_django_queries/: cli.py  cli_utils.py  diff.py  entry.py  filters.py  plugin.py  tables.py  utils.py
pytest_django_queries/templates/: default_bootstrap.jinja2
src/pytest_django_queries/: cli.py  config.py  deprecations.py  diff.py  entry.py  filters.py  plugin.py  tables.py  utils.py
src/pytest_django_queries/templates/: default_bootstrap.jinja2
tests/: __init__.py  conftest.py  settings.py  test_cli.py  test_cli_diff.py  test_diff.py  test_filters.py  test_plugin.py  test_plugin_pytest_django.py
