[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-django-queries",
]

[tool.uv.sources]
pytest-django-queries = { workspace = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example.settings"
python_files = [
    "test_*.py",
    "*_test.py",
    "test/*.py",
]
